// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pdfFicheDDA — snapshot CIF coché + recommandations (sur-ensemble allumé) > génère la fiche DDA avec cadre 'MIF II + DDA' et bloc références AMF + L.541-1 1`] = `
"<!DOCTYPE html><html lang="fr"><head><meta charset="UTF-8"/>
<title>Fiche conseil DDA — Pierre Dupont & Sophie Dupont</title>
<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet"/>
<style>
  @page{size:A4;margin:14mm 12mm 12mm 12mm;}
  *{box-sizing:border-box;}
  body{font-family:'Lato',-apple-system,BlinkMacSystemFont,sans-serif;font-size:9.5pt;line-height:1.55;color:#0F172A;margin:0;}
  .page{position:relative;min-height:255mm;padding:6mm 0 14mm 0;page-break-after:always;}
  .page:last-of-type{page-break-after:auto;}
  .cover{display:flex;flex-direction:column;justify-content:center;align-items:center;min-height:255mm;text-align:center;background:linear-gradient(135deg,#FDF6E8 0%,#fff 60%);padding:30mm 12mm;}
  .cover-logo{max-height:42mm;max-width:90mm;object-fit:contain;margin-bottom:14mm;}
  .cover-title{font-size:24pt;font-weight:900;letter-spacing:-0.5px;color:#0F172A;margin-bottom:4mm;}
  .cover-subtitle{font-size:12pt;color:#26428B;font-weight:600;margin-bottom:10mm;}
  .cover-bar{width:60mm;height:2px;background:#C4973D;margin:8mm auto;}
  .cover-tagline{font-size:8.5pt;color:#666;line-height:1.7;margin-top:6mm;max-width:130mm;}
  .cover-footer{position:absolute;bottom:14mm;left:0;right:0;text-align:center;font-size:7.5pt;color:#888;}
  .page-header{display:flex;justify-content:space-between;align-items:center;border-bottom:2px solid #C4973D;padding:0 12mm 4mm 12mm;margin-bottom:6mm;}
  .page-header-title{font-size:13pt;font-weight:700;color:#0F172A;}
  .page-header-client{font-size:8pt;color:#888;}
  .page-footer{position:absolute;bottom:6mm;left:12mm;right:12mm;display:flex;justify-content:space-between;font-size:7pt;color:#999;border-top:1px solid #eee;padding-top:3mm;}
  .section{margin:0 12mm 8mm 12mm;}
  .section-title{font-size:10pt;font-weight:700;color:#0F172A;border-bottom:1px solid #C4973D;padding-bottom:3px;margin-bottom:6px;}
  .block{background:#fff;border:1px solid rgba(227,175,100,0.25);border-left:3px solid #C4973D;border-radius:6px;padding:8px 11px;margin-bottom:8px;font-size:8.5pt;line-height:1.55;color:#333;}
  .block-title{font-size:9.5pt;font-weight:700;color:#0F172A;margin-bottom:4px;}
  .besoin-group{margin-bottom:8px;}
  .besoin-group-title{font-size:9pt;font-weight:700;color:#26428B;margin-bottom:3px;}
  .besoin-list{margin:0;padding-left:14px;}
  .besoin-list li{margin-bottom:2px;}
  .reco-dim{margin-bottom:9px;}
  .reco-dim-title{font-size:9pt;font-weight:700;color:#0F172A;border-bottom:1px dashed rgba(227,175,100,0.5);padding-bottom:2px;margin-bottom:4px;}
  .reco-card{background:#fff;border:1px solid rgba(227,175,100,0.25);border-left:3px solid #C4973D;border-radius:5px;padding:6px 9px;margin-bottom:5px;page-break-inside:avoid;break-inside:avoid;}
  .reco-libelle{font-size:9pt;font-weight:700;color:#0F172A;margin-bottom:2px;}
  .reco-justif{font-size:8pt;color:#555;line-height:1.5;}
  .reco-link{font-size:7.5pt;color:#26428B;margin-top:3px;font-style:italic;}
  .alerte{background:rgba(146,64,14,0.08);border-left:3px solid #92400E;border-radius:4px;padding:6px 10px;margin-bottom:8px;font-size:8pt;color:#92400E;line-height:1.5;}
  .portee{margin:6mm 12mm 0 12mm;font-size:7pt;color:#92400E;line-height:1.5;background:rgba(146,64,14,0.05);border-left:3px solid rgba(146,64,14,0.35);padding:6px 10px;border-radius:4px;}
  a{color:#26428B;text-decoration:none;}
  @media print{
    .block,.reco-card,.besoin-group{page-break-inside:avoid;break-inside:avoid;}
  }</style></head><body><div class="page cover">
    
    <div class="cover-title">Fiche d'information et de conseil</div>
    <div class="cover-subtitle">Distribution d'assurance — MIF II + DDA</div>
    <div class="cover-bar"></div>
    <div style="font-size:9pt;color:#0F172A;font-weight:600;margin-top:6mm;">Remise à : Pierre Dupont & Sophie Dupont</div>
    <div style="font-size:9pt;color:#666;margin-top:2mm;">25 mai 2026</div>
    <div class="cover-tagline">
      Document remis préalablement à la conclusion d'un contrat d'assurance, conformément aux articles <strong>L.521-2 et L.521-4 du Code des assurances</strong>. Il formalise les exigences et besoins exprimés ainsi que le conseil délivré et sa justification.
    </div>
    <div class="cover-footer">EcoPatrimoine Conseil · ORIAS n° 25006907 · Document confidentiel · 25 mai 2026</div>
  </div><div class="page">
    <div class="page-header"><div class="page-header-title">Identité, besoins et conseil</div><div class="page-header-client">Pierre Dupont & Sophie Dupont · 25 mai 2026</div></div>
    <div class="section">
    <div class="section-title">Client(s) — identité et état civil</div>
    <div class="block">
      <div class="block-title">Personne 1</div>
      <p>Identité : <strong>Pierre Dupont</strong></p>
      <p>Nom de naissance : Dupont</p>
      <p>Date de naissance : 12/04/1975 à Lyon (Rhône)</p>
      <p>Nationalité : française</p>
      <p>Profession : Cadre informatique</p>
    </div>
    <div class="block">
      <div class="block-title">Personne 2</div>
      <p>Identité : <strong>Sophie Dupont</strong></p>
      <p>Nom de naissance : Martin</p>
      <p>Date de naissance : 25/09/1978 à Marseille (Bouches-du-Rhône)</p>
      <p>Nationalité : française</p>
      <p>Profession : Médecin libéral</p>
    </div>
  </div>
    <div class="section">
    <div class="section-title">Exigences et besoins exprimés (art. L.521-4)</div>
    <div class="block">
      
          <div class="besoin-group">
            <div class="besoin-group-title">Santé</div>
            <ul class="besoin-list">
              <li>Dépenses non remboursées</li><li>Hospitalisation</li>
            </ul>
          </div>
          <div class="besoin-group">
            <div class="besoin-group-title">Prévoyance</div>
            <ul class="besoin-list">
              <li>Arrêt de travail / invalidité</li><li>Décès</li>
            </ul>
          </div>
          <div class="besoin-group">
            <div class="besoin-group-title">Retraite</div>
            <ul class="besoin-list">
              <li>Capital retraite</li><li>Optimiser l'épargne retraite existante</li>
            </ul>
          </div>
          <div class="besoin-group">
            <div class="besoin-group-title">Épargne et investissement</div>
            <ul class="besoin-list">
              <li>Valoriser un capital</li><li>Préparer la transmission</li>
            </ul>
          </div>
    </div>
  </div>
    <div class="section">
    <div class="section-title">Conseil fourni et justification (art. L.521-4 II)</div>
    <div class="block">
      <p style="margin-bottom:6px;font-size:8pt;color:#666;">Chaque recommandation se rattache à une <strong>dimension du profil</strong> (besoin exprimé, tolérance au risque, ESG, capacité à subir des pertes). Le conseil est raisonné <strong>besoin / garantie</strong> ; aucun produit ni assureur n'est nommé à ce stade.</p>
      <div class="reco-dim">
      <div class="reco-dim-title">Besoin exprimé</div>
      
    <div class="reco-card">
      <div class="reco-libelle">Souscrire une garantie ITT renforcée</div>
      <div class="reco-justif">Couvre l'arrêt de travail au-delà du régime obligatoire — besoin prévoyance prioritaire.</div>
      <div class="reco-link">Lié au besoin : Prévoyance — Arrêt de travail / invalidité</div>
    </div>
    <div class="reco-card">
      <div class="reco-libelle">Compléter la couverture décès toutes causes</div>
      <div class="reco-justif">Capital actuel insuffisant pour maintenir le train de vie 5 ans.</div>
      <div class="reco-link">Lié au besoin : Prévoyance — Décès</div>
    </div>
    </div><div class="reco-dim">
      <div class="reco-dim-title">Tolérance au risque</div>
      
    <div class="reco-card">
      <div class="reco-libelle">Réajuster l'allocation cible vers une part actions plus élevée</div>
      <div class="reco-justif">Profil dynamique avec horizon 9-15 ans — la part actions actuelle est en-deçà.</div>
      
    </div>
    </div><div class="reco-dim">
      <div class="reco-dim-title">Préférences en matière de durabilité (ESG)</div>
      
    <div class="reco-card">
      <div class="reco-libelle">Diversifier en supports labellisés ISR sur l'assurance-vie</div>
      <div class="reco-justif">Cohérent avec la préférence ESG partielle exprimée.</div>
      
    </div>
    </div><div class="reco-dim">
      <div class="reco-dim-title">Capacité à subir des pertes</div>
      
    <div class="reco-card">
      <div class="reco-libelle">Constituer une réserve liquide complémentaire</div>
      <div class="reco-justif">Coussin actuel inférieur à 12 mois de revenus — viser un horizon de 18 mois.</div>
      
    </div>
    </div>
    </div>
  </div>
    <div class="page-footer"><span>EcoPatrimoine Conseil · ORIAS n° 25006907 · Fiche d'information et de conseil DDA</span><span>25 mai 2026</span></div>
  </div><div class="page">
    <div class="page-header"><div class="page-header-title">IPID, adéquation et cadre réglementaire</div><div class="page-header-client">Pierre Dupont & Sophie Dupont · 25 mai 2026</div></div>
    <div class="section">
    <div class="section-title">Documents IPID — assurance non-vie</div>
    <div class="block">
      <p>Pour chaque contrat d'assurance <strong>non-vie</strong> recommandé (santé, prévoyance hors décès, dommages…), le <strong>Document d'Information sur le Produit d'Assurance (IPID)</strong> doit être remis au client préalablement à la souscription, conformément à l'article <strong>L.112-2 II du Code des assurances</strong>.</p>
      <p style="margin-top:5px;">Format : document standardisé court (2 pages maximum), structuré selon le règlement d'exécution (UE) 2017/1469.</p>
      <p style="margin-top:5px;font-style:italic;color:#666;">Emplacement : <strong>IPID joint en annexe</strong> de la présente fiche (mécanisme d'attachement géré au niveau de la mission — voir module IPID/DIC).</p>
    </div>
  </div>
    <div class="section">
    <div class="section-title">Adéquation renforcée (assurance-vie / IBIP) et durabilité (ESG)</div>
    <div class="block">
      <div class="block-title">Adéquation renforcée — produits d'investissement basés sur l'assurance (IBIP)</div>
      <p>Pour tout contrat d'assurance comportant un volet d'investissement (assurance-vie en unités de compte, contrat de capitalisation, PER assurantiel…), la <strong>recommandation est encadrée par l'art. L.522-5 du Code des assurances</strong> (devoir de conseil renforcé) qui exige la vérification :</p>
      <ul style="margin-top:4px;padding-left:14px;">
        <li>de l'<strong>adéquation</strong> entre le contrat proposé et les exigences/besoins du client ;</li>
        <li>de la <strong>cohérence</strong> avec le profil investisseur (tolérance au risque, capacité à subir des pertes, horizon de placement) ;</li>
        <li>du respect des <strong>préférences ESG</strong> exprimées (cf. ci-dessous).</li>
      </ul>
    </div>
    <div class="block">
      <div class="block-title">Préférences en matière de durabilité (ESG) — MIF II + DDA</div>
      <p>Intégration <strong>partielle</strong> des critères ESG dans les supports recommandés.</p>
      <p style="margin-top:5px;font-size:7.5pt;color:#666;">Cadre : règlement délégué (UE) 2017/2359 modifié — exigences de durabilité applicables à la distribution d'assurance depuis le 2 août 2022.</p>
    </div>
  </div>
    <div class="section">
    <div class="section-title">Cadre réglementaire et références légales</div>
    
    <div class="block">
      <p>Cette fiche est établie conformément aux obligations MIF II + DDA applicables au cabinet EcoPatrimoine Conseil, en sa qualité d'intermédiaire en assurance et de conseiller en investissements financiers.</p>
      <p style="margin-top:6px;">Références légales applicables — <em>calculées d'après les statuts du cabinet</em> :</p>
      <ul style="margin-top:4px;padding-left:14px;font-size:8.5pt;line-height:1.7;">
        <li><strong>Code des assurances</strong> · L.511-1 et s. — Conditions d'exercice de l'intermédiation en assurance</li><li><strong>Code des assurances</strong> · L.521-x — Devoir d'information et de conseil <em style="color:#92400E">(numéro précis à confirmer (paramétrable selon le modèle de l'association))</em></li><li><strong>Code des assurances</strong> · L.522-x — Assurance-vie / UC — règles spécifiques <em style="color:#92400E">(numéro précis à confirmer (paramétrable selon le modèle de l'association))</em></li><li><strong>Directive UE 2016/97 (DDA)</strong> · — — Distribution d'assurance</li><li><strong>CMF</strong> · L.541-1 et s. — Conseil en investissements financiers</li><li><strong>RG AMF</strong> · — — Règlement général AMF — références à paramétrer <em style="color:#92400E">(références précises à confirmer (paramétrables via le modèle de l'association CIF))</em></li><li><strong>Directive MIF II</strong> · — — Marchés d'instruments financiers</li>
      </ul>
      <p style="margin-top:6px;font-size:7.5pt;color:#666;">Autorité de tutelle : <strong>ACPR</strong> (4 place de Budapest, 75436 Paris Cedex 09) ; <strong>AMF</strong> pour le volet CIF (17 place de la Bourse, 75082 Paris Cedex 02).</p>
    </div>
  </div>
    <div class="portee">
      <strong>Portée du document — Ploutos (Ecopatrimoine).</strong> Ce document est généré pour vous aider à respecter vos obligations de conformité. Il ne constitue ni une attestation, ni une garantie d'exhaustivité réglementaire. Le conseiller reste seul responsable de la cohérence des mentions avec sa situation et le référentiel de son association professionnelle.
    </div>
    <div class="page-footer"><span>EcoPatrimoine Conseil · ORIAS n° 25006907 · Fiche d'information et de conseil DDA</span><span>25 mai 2026</span></div>
  </div></body></html>"
`;

exports[`pdfFicheDDA — snapshot COA seul + recommandations (fixture David) > génère la fiche DDA pour un cabinet COA seul avec 5 recommandations 1`] = `
"<!DOCTYPE html><html lang="fr"><head><meta charset="UTF-8"/>
<title>Fiche conseil DDA — Pierre Dupont & Sophie Dupont</title>
<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet"/>
<style>
  @page{size:A4;margin:14mm 12mm 12mm 12mm;}
  *{box-sizing:border-box;}
  body{font-family:'Lato',-apple-system,BlinkMacSystemFont,sans-serif;font-size:9.5pt;line-height:1.55;color:#0F172A;margin:0;}
  .page{position:relative;min-height:255mm;padding:6mm 0 14mm 0;page-break-after:always;}
  .page:last-of-type{page-break-after:auto;}
  .cover{display:flex;flex-direction:column;justify-content:center;align-items:center;min-height:255mm;text-align:center;background:linear-gradient(135deg,#FDF6E8 0%,#fff 60%);padding:30mm 12mm;}
  .cover-logo{max-height:42mm;max-width:90mm;object-fit:contain;margin-bottom:14mm;}
  .cover-title{font-size:24pt;font-weight:900;letter-spacing:-0.5px;color:#0F172A;margin-bottom:4mm;}
  .cover-subtitle{font-size:12pt;color:#26428B;font-weight:600;margin-bottom:10mm;}
  .cover-bar{width:60mm;height:2px;background:#C4973D;margin:8mm auto;}
  .cover-tagline{font-size:8.5pt;color:#666;line-height:1.7;margin-top:6mm;max-width:130mm;}
  .cover-footer{position:absolute;bottom:14mm;left:0;right:0;text-align:center;font-size:7.5pt;color:#888;}
  .page-header{display:flex;justify-content:space-between;align-items:center;border-bottom:2px solid #C4973D;padding:0 12mm 4mm 12mm;margin-bottom:6mm;}
  .page-header-title{font-size:13pt;font-weight:700;color:#0F172A;}
  .page-header-client{font-size:8pt;color:#888;}
  .page-footer{position:absolute;bottom:6mm;left:12mm;right:12mm;display:flex;justify-content:space-between;font-size:7pt;color:#999;border-top:1px solid #eee;padding-top:3mm;}
  .section{margin:0 12mm 8mm 12mm;}
  .section-title{font-size:10pt;font-weight:700;color:#0F172A;border-bottom:1px solid #C4973D;padding-bottom:3px;margin-bottom:6px;}
  .block{background:#fff;border:1px solid rgba(227,175,100,0.25);border-left:3px solid #C4973D;border-radius:6px;padding:8px 11px;margin-bottom:8px;font-size:8.5pt;line-height:1.55;color:#333;}
  .block-title{font-size:9.5pt;font-weight:700;color:#0F172A;margin-bottom:4px;}
  .besoin-group{margin-bottom:8px;}
  .besoin-group-title{font-size:9pt;font-weight:700;color:#26428B;margin-bottom:3px;}
  .besoin-list{margin:0;padding-left:14px;}
  .besoin-list li{margin-bottom:2px;}
  .reco-dim{margin-bottom:9px;}
  .reco-dim-title{font-size:9pt;font-weight:700;color:#0F172A;border-bottom:1px dashed rgba(227,175,100,0.5);padding-bottom:2px;margin-bottom:4px;}
  .reco-card{background:#fff;border:1px solid rgba(227,175,100,0.25);border-left:3px solid #C4973D;border-radius:5px;padding:6px 9px;margin-bottom:5px;page-break-inside:avoid;break-inside:avoid;}
  .reco-libelle{font-size:9pt;font-weight:700;color:#0F172A;margin-bottom:2px;}
  .reco-justif{font-size:8pt;color:#555;line-height:1.5;}
  .reco-link{font-size:7.5pt;color:#26428B;margin-top:3px;font-style:italic;}
  .alerte{background:rgba(146,64,14,0.08);border-left:3px solid #92400E;border-radius:4px;padding:6px 10px;margin-bottom:8px;font-size:8pt;color:#92400E;line-height:1.5;}
  .portee{margin:6mm 12mm 0 12mm;font-size:7pt;color:#92400E;line-height:1.5;background:rgba(146,64,14,0.05);border-left:3px solid rgba(146,64,14,0.35);padding:6px 10px;border-radius:4px;}
  a{color:#26428B;text-decoration:none;}
  @media print{
    .block,.reco-card,.besoin-group{page-break-inside:avoid;break-inside:avoid;}
  }</style></head><body><div class="page cover">
    
    <div class="cover-title">Fiche d'information et de conseil</div>
    <div class="cover-subtitle">Distribution d'assurance — DDA</div>
    <div class="cover-bar"></div>
    <div style="font-size:9pt;color:#0F172A;font-weight:600;margin-top:6mm;">Remise à : Pierre Dupont & Sophie Dupont</div>
    <div style="font-size:9pt;color:#666;margin-top:2mm;">25 mai 2026</div>
    <div class="cover-tagline">
      Document remis préalablement à la conclusion d'un contrat d'assurance, conformément aux articles <strong>L.521-2 et L.521-4 du Code des assurances</strong>. Il formalise les exigences et besoins exprimés ainsi que le conseil délivré et sa justification.
    </div>
    <div class="cover-footer">EcoPatrimoine Conseil · ORIAS n° 25006907 · Document confidentiel · 25 mai 2026</div>
  </div><div class="page">
    <div class="page-header"><div class="page-header-title">Identité, besoins et conseil</div><div class="page-header-client">Pierre Dupont & Sophie Dupont · 25 mai 2026</div></div>
    <div class="section">
    <div class="section-title">Client(s) — identité et état civil</div>
    <div class="block">
      <div class="block-title">Personne 1</div>
      <p>Identité : <strong>Pierre Dupont</strong></p>
      <p>Nom de naissance : Dupont</p>
      <p>Date de naissance : 12/04/1975 à Lyon (Rhône)</p>
      <p>Nationalité : française</p>
      <p>Profession : Cadre informatique</p>
    </div>
    <div class="block">
      <div class="block-title">Personne 2</div>
      <p>Identité : <strong>Sophie Dupont</strong></p>
      <p>Nom de naissance : Martin</p>
      <p>Date de naissance : 25/09/1978 à Marseille (Bouches-du-Rhône)</p>
      <p>Nationalité : française</p>
      <p>Profession : Médecin libéral</p>
    </div>
  </div>
    <div class="section">
    <div class="section-title">Exigences et besoins exprimés (art. L.521-4)</div>
    <div class="block">
      
          <div class="besoin-group">
            <div class="besoin-group-title">Santé</div>
            <ul class="besoin-list">
              <li>Dépenses non remboursées</li><li>Hospitalisation</li>
            </ul>
          </div>
          <div class="besoin-group">
            <div class="besoin-group-title">Prévoyance</div>
            <ul class="besoin-list">
              <li>Arrêt de travail / invalidité</li><li>Décès</li>
            </ul>
          </div>
          <div class="besoin-group">
            <div class="besoin-group-title">Retraite</div>
            <ul class="besoin-list">
              <li>Capital retraite</li><li>Optimiser l'épargne retraite existante</li>
            </ul>
          </div>
          <div class="besoin-group">
            <div class="besoin-group-title">Épargne et investissement</div>
            <ul class="besoin-list">
              <li>Valoriser un capital</li><li>Préparer la transmission</li>
            </ul>
          </div>
    </div>
  </div>
    <div class="section">
    <div class="section-title">Conseil fourni et justification (art. L.521-4 II)</div>
    <div class="block">
      <p style="margin-bottom:6px;font-size:8pt;color:#666;">Chaque recommandation se rattache à une <strong>dimension du profil</strong> (besoin exprimé, tolérance au risque, ESG, capacité à subir des pertes). Le conseil est raisonné <strong>besoin / garantie</strong> ; aucun produit ni assureur n'est nommé à ce stade.</p>
      <div class="reco-dim">
      <div class="reco-dim-title">Besoin exprimé</div>
      
    <div class="reco-card">
      <div class="reco-libelle">Souscrire une garantie ITT renforcée</div>
      <div class="reco-justif">Couvre l'arrêt de travail au-delà du régime obligatoire — besoin prévoyance prioritaire.</div>
      <div class="reco-link">Lié au besoin : Prévoyance — Arrêt de travail / invalidité</div>
    </div>
    <div class="reco-card">
      <div class="reco-libelle">Compléter la couverture décès toutes causes</div>
      <div class="reco-justif">Capital actuel insuffisant pour maintenir le train de vie 5 ans.</div>
      <div class="reco-link">Lié au besoin : Prévoyance — Décès</div>
    </div>
    </div><div class="reco-dim">
      <div class="reco-dim-title">Tolérance au risque</div>
      
    <div class="reco-card">
      <div class="reco-libelle">Réajuster l'allocation cible vers une part actions plus élevée</div>
      <div class="reco-justif">Profil dynamique avec horizon 9-15 ans — la part actions actuelle est en-deçà.</div>
      
    </div>
    </div><div class="reco-dim">
      <div class="reco-dim-title">Préférences en matière de durabilité (ESG)</div>
      
    <div class="reco-card">
      <div class="reco-libelle">Diversifier en supports labellisés ISR sur l'assurance-vie</div>
      <div class="reco-justif">Cohérent avec la préférence ESG partielle exprimée.</div>
      
    </div>
    </div><div class="reco-dim">
      <div class="reco-dim-title">Capacité à subir des pertes</div>
      
    <div class="reco-card">
      <div class="reco-libelle">Constituer une réserve liquide complémentaire</div>
      <div class="reco-justif">Coussin actuel inférieur à 12 mois de revenus — viser un horizon de 18 mois.</div>
      
    </div>
    </div>
    </div>
  </div>
    <div class="page-footer"><span>EcoPatrimoine Conseil · ORIAS n° 25006907 · Fiche d'information et de conseil DDA</span><span>25 mai 2026</span></div>
  </div><div class="page">
    <div class="page-header"><div class="page-header-title">IPID, adéquation et cadre réglementaire</div><div class="page-header-client">Pierre Dupont & Sophie Dupont · 25 mai 2026</div></div>
    <div class="section">
    <div class="section-title">Documents IPID — assurance non-vie</div>
    <div class="block">
      <p>Pour chaque contrat d'assurance <strong>non-vie</strong> recommandé (santé, prévoyance hors décès, dommages…), le <strong>Document d'Information sur le Produit d'Assurance (IPID)</strong> doit être remis au client préalablement à la souscription, conformément à l'article <strong>L.112-2 II du Code des assurances</strong>.</p>
      <p style="margin-top:5px;">Format : document standardisé court (2 pages maximum), structuré selon le règlement d'exécution (UE) 2017/1469.</p>
      <p style="margin-top:5px;font-style:italic;color:#666;">Emplacement : <strong>IPID joint en annexe</strong> de la présente fiche (mécanisme d'attachement géré au niveau de la mission — voir module IPID/DIC).</p>
    </div>
  </div>
    <div class="section">
    <div class="section-title">Adéquation renforcée (assurance-vie / IBIP) et durabilité (ESG)</div>
    <div class="block">
      <div class="block-title">Adéquation renforcée — produits d'investissement basés sur l'assurance (IBIP)</div>
      <p>Pour tout contrat d'assurance comportant un volet d'investissement (assurance-vie en unités de compte, contrat de capitalisation, PER assurantiel…), la <strong>recommandation est encadrée par l'art. L.522-5 du Code des assurances</strong> (devoir de conseil renforcé) qui exige la vérification :</p>
      <ul style="margin-top:4px;padding-left:14px;">
        <li>de l'<strong>adéquation</strong> entre le contrat proposé et les exigences/besoins du client ;</li>
        <li>de la <strong>cohérence</strong> avec le profil investisseur (tolérance au risque, capacité à subir des pertes, horizon de placement) ;</li>
        <li>du respect des <strong>préférences ESG</strong> exprimées (cf. ci-dessous).</li>
      </ul>
    </div>
    <div class="block">
      <div class="block-title">Préférences en matière de durabilité (ESG) — DDA</div>
      <p>Intégration <strong>partielle</strong> des critères ESG dans les supports recommandés.</p>
      <p style="margin-top:5px;font-size:7.5pt;color:#666;">Cadre : règlement délégué (UE) 2017/2359 modifié — exigences de durabilité applicables à la distribution d'assurance depuis le 2 août 2022.</p>
    </div>
  </div>
    <div class="section">
    <div class="section-title">Cadre réglementaire et références légales</div>
    
    <div class="block">
      <p>Cette fiche est établie conformément aux obligations DDA applicables au cabinet EcoPatrimoine Conseil, en sa qualité d'intermédiaire en assurance.</p>
      <p style="margin-top:6px;">Références légales applicables — <em>calculées d'après les statuts du cabinet</em> :</p>
      <ul style="margin-top:4px;padding-left:14px;font-size:8.5pt;line-height:1.7;">
        <li><strong>Code des assurances</strong> · L.511-1 et s. — Conditions d'exercice de l'intermédiation en assurance</li><li><strong>Code des assurances</strong> · L.521-x — Devoir d'information et de conseil <em style="color:#92400E">(numéro précis à confirmer (paramétrable selon le modèle de l'association))</em></li><li><strong>Code des assurances</strong> · L.522-x — Assurance-vie / UC — règles spécifiques <em style="color:#92400E">(numéro précis à confirmer (paramétrable selon le modèle de l'association))</em></li><li><strong>Directive UE 2016/97 (DDA)</strong> · — — Distribution d'assurance</li>
      </ul>
      <p style="margin-top:6px;font-size:7.5pt;color:#666;">Autorité de tutelle : <strong>ACPR</strong> (4 place de Budapest, 75436 Paris Cedex 09).</p>
    </div>
  </div>
    <div class="portee">
      <strong>Portée du document — Ploutos (Ecopatrimoine).</strong> Ce document est généré pour vous aider à respecter vos obligations de conformité. Il ne constitue ni une attestation, ni une garantie d'exhaustivité réglementaire. Le conseiller reste seul responsable de la cohérence des mentions avec sa situation et le référentiel de son association professionnelle.
    </div>
    <div class="page-footer"><span>EcoPatrimoine Conseil · ORIAS n° 25006907 · Fiche d'information et de conseil DDA</span><span>25 mai 2026</span></div>
  </div></body></html>"
`;

exports[`pdfFicheDDA — snapshot dossier vide (aucune reco, aucun besoin coché) > fige le rendu dégradé avec messages 'aucune reco' / 'aucun besoin' 1`] = `
"<!DOCTYPE html><html lang="fr"><head><meta charset="UTF-8"/>
<title>Fiche conseil DDA — Pierre Dupont</title>
<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet"/>
<style>
  @page{size:A4;margin:14mm 12mm 12mm 12mm;}
  *{box-sizing:border-box;}
  body{font-family:'Lato',-apple-system,BlinkMacSystemFont,sans-serif;font-size:9.5pt;line-height:1.55;color:#0F172A;margin:0;}
  .page{position:relative;min-height:255mm;padding:6mm 0 14mm 0;page-break-after:always;}
  .page:last-of-type{page-break-after:auto;}
  .cover{display:flex;flex-direction:column;justify-content:center;align-items:center;min-height:255mm;text-align:center;background:linear-gradient(135deg,#FDF6E8 0%,#fff 60%);padding:30mm 12mm;}
  .cover-logo{max-height:42mm;max-width:90mm;object-fit:contain;margin-bottom:14mm;}
  .cover-title{font-size:24pt;font-weight:900;letter-spacing:-0.5px;color:#0F172A;margin-bottom:4mm;}
  .cover-subtitle{font-size:12pt;color:#26428B;font-weight:600;margin-bottom:10mm;}
  .cover-bar{width:60mm;height:2px;background:#C4973D;margin:8mm auto;}
  .cover-tagline{font-size:8.5pt;color:#666;line-height:1.7;margin-top:6mm;max-width:130mm;}
  .cover-footer{position:absolute;bottom:14mm;left:0;right:0;text-align:center;font-size:7.5pt;color:#888;}
  .page-header{display:flex;justify-content:space-between;align-items:center;border-bottom:2px solid #C4973D;padding:0 12mm 4mm 12mm;margin-bottom:6mm;}
  .page-header-title{font-size:13pt;font-weight:700;color:#0F172A;}
  .page-header-client{font-size:8pt;color:#888;}
  .page-footer{position:absolute;bottom:6mm;left:12mm;right:12mm;display:flex;justify-content:space-between;font-size:7pt;color:#999;border-top:1px solid #eee;padding-top:3mm;}
  .section{margin:0 12mm 8mm 12mm;}
  .section-title{font-size:10pt;font-weight:700;color:#0F172A;border-bottom:1px solid #C4973D;padding-bottom:3px;margin-bottom:6px;}
  .block{background:#fff;border:1px solid rgba(227,175,100,0.25);border-left:3px solid #C4973D;border-radius:6px;padding:8px 11px;margin-bottom:8px;font-size:8.5pt;line-height:1.55;color:#333;}
  .block-title{font-size:9.5pt;font-weight:700;color:#0F172A;margin-bottom:4px;}
  .besoin-group{margin-bottom:8px;}
  .besoin-group-title{font-size:9pt;font-weight:700;color:#26428B;margin-bottom:3px;}
  .besoin-list{margin:0;padding-left:14px;}
  .besoin-list li{margin-bottom:2px;}
  .reco-dim{margin-bottom:9px;}
  .reco-dim-title{font-size:9pt;font-weight:700;color:#0F172A;border-bottom:1px dashed rgba(227,175,100,0.5);padding-bottom:2px;margin-bottom:4px;}
  .reco-card{background:#fff;border:1px solid rgba(227,175,100,0.25);border-left:3px solid #C4973D;border-radius:5px;padding:6px 9px;margin-bottom:5px;page-break-inside:avoid;break-inside:avoid;}
  .reco-libelle{font-size:9pt;font-weight:700;color:#0F172A;margin-bottom:2px;}
  .reco-justif{font-size:8pt;color:#555;line-height:1.5;}
  .reco-link{font-size:7.5pt;color:#26428B;margin-top:3px;font-style:italic;}
  .alerte{background:rgba(146,64,14,0.08);border-left:3px solid #92400E;border-radius:4px;padding:6px 10px;margin-bottom:8px;font-size:8pt;color:#92400E;line-height:1.5;}
  .portee{margin:6mm 12mm 0 12mm;font-size:7pt;color:#92400E;line-height:1.5;background:rgba(146,64,14,0.05);border-left:3px solid rgba(146,64,14,0.35);padding:6px 10px;border-radius:4px;}
  a{color:#26428B;text-decoration:none;}
  @media print{
    .block,.reco-card,.besoin-group{page-break-inside:avoid;break-inside:avoid;}
  }</style></head><body><div class="page cover">
    
    <div class="cover-title">Fiche d'information et de conseil</div>
    <div class="cover-subtitle">Distribution d'assurance — DDA</div>
    <div class="cover-bar"></div>
    <div style="font-size:9pt;color:#0F172A;font-weight:600;margin-top:6mm;">Remise à : Pierre Dupont</div>
    <div style="font-size:9pt;color:#666;margin-top:2mm;">25 mai 2026</div>
    <div class="cover-tagline">
      Document remis préalablement à la conclusion d'un contrat d'assurance, conformément aux articles <strong>L.521-2 et L.521-4 du Code des assurances</strong>. Il formalise les exigences et besoins exprimés ainsi que le conseil délivré et sa justification.
    </div>
    <div class="cover-footer">EcoPatrimoine Conseil · ORIAS n° 25006907 · Document confidentiel · 25 mai 2026</div>
  </div><div class="page">
    <div class="page-header"><div class="page-header-title">Identité, besoins et conseil</div><div class="page-header-client">Pierre Dupont · 25 mai 2026</div></div>
    <div class="section">
    <div class="section-title">Client(s) — identité et état civil</div>
    <div class="block">
      <div class="block-title">Personne 1</div>
      <p>Identité : <strong>Pierre Dupont</strong></p>
      <p>Nom de naissance : Dupont</p>
      <p>Date de naissance : 12/04/1975 à Lyon (Rhône)</p>
      <p>Nationalité : française</p>
      <p>Profession : Cadre informatique</p>
    </div>
    <div class="block">
      <div class="block-title">Personne 2</div>
      <p>Identité : <strong>Sophie Dupont</strong></p>
      <p>Nom de naissance : Martin</p>
      <p>Date de naissance : 25/09/1978 à Marseille (Bouches-du-Rhône)</p>
      <p>Nationalité : française</p>
      <p>Profession : Médecin libéral</p>
    </div>
  </div>
    <div class="section">
    <div class="section-title">Exigences et besoins exprimés (art. L.521-4)</div>
    <div class="block">
      <p><em style="color:#92400E">Aucun besoin coché dans le formulaire de mission. À compléter dans l'onglet « Lettre de mission » pour produire la fiche de conseil DDA.</em></p>
    </div>
  </div>
    <div class="section">
    <div class="section-title">Conseil fourni et justification (art. L.521-4 II)</div>
    <div class="block">
      <p style="margin-bottom:6px;font-size:8pt;color:#666;">Chaque recommandation se rattache à une <strong>dimension du profil</strong> (besoin exprimé, tolérance au risque, ESG, capacité à subir des pertes). Le conseil est raisonné <strong>besoin / garantie</strong> ; aucun produit ni assureur n'est nommé à ce stade.</p>
      <p><em style="color:#92400E">Aucune recommandation enregistrée pour ce dossier. À saisir dans l'onglet « Lettre de mission » → bloc « Recommandations & plan d'action ».</em></p>
    </div>
  </div>
    <div class="page-footer"><span>EcoPatrimoine Conseil · ORIAS n° 25006907 · Fiche d'information et de conseil DDA</span><span>25 mai 2026</span></div>
  </div><div class="page">
    <div class="page-header"><div class="page-header-title">IPID, adéquation et cadre réglementaire</div><div class="page-header-client">Pierre Dupont · 25 mai 2026</div></div>
    <div class="section">
    <div class="section-title">Documents IPID — assurance non-vie</div>
    <div class="block">
      <p>Pour chaque contrat d'assurance <strong>non-vie</strong> recommandé (santé, prévoyance hors décès, dommages…), le <strong>Document d'Information sur le Produit d'Assurance (IPID)</strong> doit être remis au client préalablement à la souscription, conformément à l'article <strong>L.112-2 II du Code des assurances</strong>.</p>
      <p style="margin-top:5px;">Format : document standardisé court (2 pages maximum), structuré selon le règlement d'exécution (UE) 2017/1469.</p>
      <p style="margin-top:5px;font-style:italic;color:#666;">Emplacement : <strong>IPID joint en annexe</strong> de la présente fiche (mécanisme d'attachement géré au niveau de la mission — voir module IPID/DIC).</p>
    </div>
  </div>
    <div class="section">
    <div class="section-title">Adéquation renforcée (assurance-vie / IBIP) et durabilité (ESG)</div>
    <div class="block">
      <div class="block-title">Adéquation renforcée — produits d'investissement basés sur l'assurance (IBIP)</div>
      <p>Pour tout contrat d'assurance comportant un volet d'investissement (assurance-vie en unités de compte, contrat de capitalisation, PER assurantiel…), la <strong>recommandation est encadrée par l'art. L.522-5 du Code des assurances</strong> (devoir de conseil renforcé) qui exige la vérification :</p>
      <ul style="margin-top:4px;padding-left:14px;">
        <li>de l'<strong>adéquation</strong> entre le contrat proposé et les exigences/besoins du client ;</li>
        <li>de la <strong>cohérence</strong> avec le profil investisseur (tolérance au risque, capacité à subir des pertes, horizon de placement) ;</li>
        <li>du respect des <strong>préférences ESG</strong> exprimées (cf. ci-dessous).</li>
      </ul>
    </div>
    <div class="block">
      <div class="block-title">Préférences en matière de durabilité (ESG) — DDA</div>
      <p><em>Aucune préférence ESG exprimée par le client.</em></p>
      <p style="margin-top:5px;font-size:7.5pt;color:#666;">Cadre : règlement délégué (UE) 2017/2359 modifié — exigences de durabilité applicables à la distribution d'assurance depuis le 2 août 2022.</p>
    </div>
  </div>
    <div class="section">
    <div class="section-title">Cadre réglementaire et références légales</div>
    
    <div class="block">
      <p>Cette fiche est établie conformément aux obligations DDA applicables au cabinet EcoPatrimoine Conseil, en sa qualité d'intermédiaire en assurance.</p>
      <p style="margin-top:6px;">Références légales applicables — <em>calculées d'après les statuts du cabinet</em> :</p>
      <ul style="margin-top:4px;padding-left:14px;font-size:8.5pt;line-height:1.7;">
        <li><strong>Code des assurances</strong> · L.511-1 et s. — Conditions d'exercice de l'intermédiation en assurance</li><li><strong>Code des assurances</strong> · L.521-x — Devoir d'information et de conseil <em style="color:#92400E">(numéro précis à confirmer (paramétrable selon le modèle de l'association))</em></li><li><strong>Code des assurances</strong> · L.522-x — Assurance-vie / UC — règles spécifiques <em style="color:#92400E">(numéro précis à confirmer (paramétrable selon le modèle de l'association))</em></li><li><strong>Directive UE 2016/97 (DDA)</strong> · — — Distribution d'assurance</li>
      </ul>
      <p style="margin-top:6px;font-size:7.5pt;color:#666;">Autorité de tutelle : <strong>ACPR</strong> (4 place de Budapest, 75436 Paris Cedex 09).</p>
    </div>
  </div>
    <div class="portee">
      <strong>Portée du document — Ploutos (Ecopatrimoine).</strong> Ce document est généré pour vous aider à respecter vos obligations de conformité. Il ne constitue ni une attestation, ni une garantie d'exhaustivité réglementaire. Le conseiller reste seul responsable de la cohérence des mentions avec sa situation et le référentiel de son association professionnelle.
    </div>
    <div class="page-footer"><span>EcoPatrimoine Conseil · ORIAS n° 25006907 · Fiche d'information et de conseil DDA</span><span>25 mai 2026</span></div>
  </div></body></html>"
`;
